--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,60 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDE and editor specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Database files
+*.sqlite3
+*.db
+*.sqlite
+
+# Temporary files
+.tmp/
+temp/
+*.tmp
+*.bak
+
+# Testing and coverage
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
+debug/
+
+# OS specific
+Thumbs.db
+.DS_Store
+
+# Project specific
+data/
+logs/
+misc/
